# automake-example

./: .gitignore  Makefile.am  README.txt  configure.ac
m4/: ChangeLog
po/: LINGUAS  Makefile.am  en_US.po  fi.gmo  fi.po  hello.pot
src/: Makefile.am  main.c
